{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 434,
  "lineage": "489ff826-f8ec-7343-22d7-72400067c1b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:loadbalancer/app/adidas-backend-alb/34c0d5b90b113d2f",
            "arn_suffix": "app/adidas-backend-alb/34c0d5b90b113d2f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-adidas-backend-alb-1183662551.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:loadbalancer/app/adidas-backend-alb/34c0d5b90b113d2f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "adidas-backend-alb",
            "security_groups": [
              "sg-0d9bcf86a713db2ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02685e2f9c310763a"
              },
              {
                "subnet_id": "subnet-04aac59adfe98fda1"
              }
            ],
            "subnets": [
              "subnet-02685e2f9c310763a",
              "subnet-04aac59adfe98fda1"
            ],
            "tags": {
              "Name": "adidas-backend-alb"
            },
            "tags_all": {
              "Name": "adidas-backend-alb"
            },
            "vpc_id": "vpc-097baa390882730c8",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.adidas_elb_sg_backend",
            "aws_security_group.adidas_elb_sg_frontend",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:loadbalancer/app/adidas-frontend-alb/9ac521fc63b4c287",
            "arn_suffix": "app/adidas-frontend-alb/9ac521fc63b4c287",
            "desync_mitigation_mode": "defensive",
            "dns_name": "adidas-frontend-alb-21238939.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:loadbalancer/app/adidas-frontend-alb/9ac521fc63b4c287",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "adidas-frontend-alb",
            "security_groups": [
              "sg-065cb8a77eb07cc98"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03447f6866bce8872"
              },
              {
                "subnet_id": "subnet-0b0ff98cd52e24c6f"
              }
            ],
            "subnets": [
              "subnet-03447f6866bce8872",
              "subnet-0b0ff98cd52e24c6f"
            ],
            "tags": {
              "Name": "adidas-frontend-alb"
            },
            "tags_all": {
              "Name": "adidas-frontend-alb"
            },
            "vpc_id": "vpc-097baa390882730c8",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.adidas_elb_sg_frontend",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "backend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:targetgroup/adidas-backend-tg/dd9a4e7d575e45b3",
            "arn_suffix": "targetgroup/adidas-backend-tg/dd9a4e7d575e45b3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:targetgroup/adidas-backend-tg/dd9a4e7d575e45b3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "adidas-backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "frontend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:targetgroup/adidas-frontend-tg/a0df562b3ebd52e1",
            "arn_suffix": "targetgroup/adidas-frontend-tg/a0df562b3ebd52e1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:677276121580:targetgroup/adidas-frontend-tg/a0df562b3ebd52e1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "adidas-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "adidas-frontend-tg"
            },
            "tags_all": {
              "Name": "adidas-frontend-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_for_ami_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c7683e4ca3ebf58",
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:instance/i-08214c27e4fb68fad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08214c27e4fb68fad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adidas-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073cfc57f09addef3",
            "private_dns": "ip-10-0-3-111.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.111",
            "public_ip": "47.129.213.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03424e7c686c3095f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d4396f50aa790984",
              "sg-0d9bcf86a713db2ff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02685e2f9c310763a",
            "tags": {
              "Name": "ami-for-ec2-backend"
            },
            "tags_all": {
              "Name": "ami-for-ec2-backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d4396f50aa790984",
              "sg-0d9bcf86a713db2ff"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.adidas_elb_sg_backend",
            "aws_security_group.adidas_elb_sg_frontend",
            "aws_security_group.adidas_vpc_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.adidas_vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_for_ami_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c7683e4ca3ebf58",
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:instance/i-0cb765b5307c5ffe7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb765b5307c5ffe7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adidas-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8a84f807a725c60",
            "private_dns": "ip-10-0-1-143.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.143",
            "public_ip": "47.129.174.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0514d159963291cb8",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-065cb8a77eb07cc98",
              "sg-0d4396f50aa790984"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0ff98cd52e24c6f",
            "tags": {
              "Name": "ami-for-ec2"
            },
            "tags_all": {
              "Name": "ami-for-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065cb8a77eb07cc98",
              "sg-0d4396f50aa790984"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.adidas_elb_sg_frontend",
            "aws_security_group.adidas_vpc_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.adidas_vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "adidas_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:internet-gateway/igw-09a5b4492fd9d7dfa",
            "id": "igw-09a5b4492fd9d7dfa",
            "owner_id": "677276121580",
            "tags": {
              "Name": "adidas-vpc-igw"
            },
            "tags_all": {
              "Name": "adidas-vpc-igw"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "adidas_vpc_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:network-acl/acl-0692d50ca984d561b",
            "egress": [],
            "id": "acl-0692d50ca984d561b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "677276121580",
            "subnet_ids": [],
            "tags": {
              "Name": "adidas-vpc-acl"
            },
            "tags_all": {
              "Name": "adidas-vpc-acl"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "adidas_vpc_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:route-table/rtb-0d34d61b44af3290a",
            "id": "rtb-0d34d61b44af3290a",
            "owner_id": "677276121580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a5b4492fd9d7dfa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "adidas-vpc-route-table"
            },
            "tags_all": {
              "Name": "adidas-vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-097baa390882730c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.adidas_vpc_igw",
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b782b6878f711eb2",
            "route_table_id": "rtb-0d34d61b44af3290a",
            "subnet_id": "subnet-0b0ff98cd52e24c6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.adidas_vpc_igw",
            "aws_route_table.adidas_vpc_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00234c7055368290d",
            "route_table_id": "rtb-0d34d61b44af3290a",
            "subnet_id": "subnet-03447f6866bce8872"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.adidas_vpc_igw",
            "aws_route_table.adidas_vpc_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adidas_elb_sg_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:security-group/sg-0d9bcf86a713db2ff",
            "description": "Security group for Adidas ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d9bcf86a713db2ff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065cb8a77eb07cc98"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "adidas-elb-security-group-backend",
            "name_prefix": "",
            "owner_id": "677276121580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adidas-elb-sg"
            },
            "tags_all": {
              "Name": "adidas-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-097baa390882730c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.adidas_elb_sg_frontend",
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adidas_elb_sg_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:security-group/sg-065cb8a77eb07cc98",
            "description": "Security group for Adidas ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-065cb8a77eb07cc98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "adidas-elb-security-group",
            "name_prefix": "",
            "owner_id": "677276121580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adidas-elb-sg"
            },
            "tags_all": {
              "Name": "adidas-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-097baa390882730c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adidas_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:security-group/sg-0d55e4efb25ed0d31",
            "description": "Security group for Adidas RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d55e4efb25ed0d31",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4396f50aa790984",
                  "sg-0d9bcf86a713db2ff"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "adidas-rds-security-group",
            "name_prefix": "",
            "owner_id": "677276121580",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097baa390882730c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.adidas_elb_sg_backend",
            "aws_security_group.adidas_elb_sg_frontend",
            "aws_security_group.adidas_vpc_sg",
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adidas_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:security-group/sg-0d4396f50aa790984",
            "description": "Security group for Adidas project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d4396f50aa790984",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "adidas-vpc-security-group",
            "name_prefix": "",
            "owner_id": "677276121580",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097baa390882730c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:subnet/subnet-0a7a4d47119d2cb02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7a4d47119d2cb02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276121580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adidas-database-subnet"
            },
            "tags_all": {
              "Name": "adidas-database-subnet"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:subnet/subnet-041175d0dd82bb849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041175d0dd82bb849",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276121580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adidas-database-subnet-2"
            },
            "tags_all": {
              "Name": "adidas-database-subnet-2"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:subnet/subnet-02685e2f9c310763a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02685e2f9c310763a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276121580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adidas-private-subnet"
            },
            "tags_all": {
              "Name": "adidas-private-subnet"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:subnet/subnet-04aac59adfe98fda1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aac59adfe98fda1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276121580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adidas-private-subnet"
            },
            "tags_all": {
              "Name": "adidas-private-subnet"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:subnet/subnet-0b0ff98cd52e24c6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0ff98cd52e24c6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276121580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adidas-public-subnet"
            },
            "tags_all": {
              "Name": "adidas-public-subnet"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:subnet/subnet-03447f6866bce8872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03447f6866bce8872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276121580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adidas-public-subnet"
            },
            "tags_all": {
              "Name": "adidas-public-subnet"
            },
            "vpc_id": "vpc-097baa390882730c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adidas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "adidas_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:677276121580:vpc/vpc-097baa390882730c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1a9bac580fad785",
            "default_route_table_id": "rtb-02649d00758c4beff",
            "default_security_group_id": "sg-08395e45151951d78",
            "dhcp_options_id": "dopt-063704c3e8855c37a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-097baa390882730c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02649d00758c4beff",
            "owner_id": "677276121580",
            "tags": {
              "Name": "adidas-vpc"
            },
            "tags_all": {
              "Name": "adidas-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}